--- a/01_Presentacion/01_Presentacion.csproj
+++ b/01_Presentacion/01_Presentacion.csproj
@@ -4446,6 +4446,10 @@
     <Content Include="Bootstrap\Intranet\vendors\validator\README.md" />
     <Content Include="Bootstrap\Intranet\vendors\validator\validator.jquery.json" />
     <Content Include="Views\Home\Login.cshtml" />
+    <Content Include="Views\Home\Registro.cshtml" />
+    <Content Include="Views\Cliente\Nuevo.cshtml" />
+    <Content Include="Views\Intranet\Main.cshtml" />
+    <Content Include="Views\Producto\PlatosDisponibles.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -4453,11 +4457,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Views\Cliente\" />
-    <Folder Include="Views\Intranet\" />
-    <Folder Include="Views\Producto\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\02_Aplicacion\02_Aplicacion.csproj">
       <Project>{c5061eaa-844d-42d1-8d4d-8aba97b56166}</Project>
