--- a/01_Presentacion/01_Presentacion.csproj
+++ b/01_Presentacion/01_Presentacion.csproj
@@ -110,14 +110,18 @@
     <Content Include="Bootstrap\Extranet\css\superfish.css" />
     <Content Include="Bootstrap\Extranet\css\touchTouch.css" />
     <Content Include="Bootstrap\Extranet\fonts\fontawesome-webfont.svg" />
+    <Content Include="Bootstrap\Extranet\images\Ae3QqtC.jpg" />
     <Content Include="Bootstrap\Extranet\images\arrowws.png" />
     <Content Include="Bootstrap\Extranet\images\bann_sep.png" />
     <Content Include="Bootstrap\Extranet\images\big1.jpg" />
     <Content Include="Bootstrap\Extranet\images\big2.jpg" />
     <Content Include="Bootstrap\Extranet\images\big3.jpg" />
+    <Content Include="Bootstrap\Extranet\images\Captura.PNG" />
+    <Content Include="Bootstrap\Extranet\images\Captura2.PNG" />
     <Content Include="Bootstrap\Extranet\images\ceviche_pescado.jpg" />
     <Content Include="Bootstrap\Extranet\images\chibolo.jpg" />
     <Content Include="Bootstrap\Extranet\images\gelatina_fresa.jpg" />
+    <Content Include="Bootstrap\Extranet\images\hola.jpg" />
     <Content Include="Bootstrap\Extranet\images\icon1.png" />
     <Content Include="Bootstrap\Extranet\images\icon2.png" />
     <Content Include="Bootstrap\Extranet\images\icon3.png" />
@@ -160,15 +164,12 @@
     <Content Include="Bootstrap\Extranet\js\touchTouch.jquery.js" />
     <Content Include="Bootstrap\Intranet\build\css\custom.css" />
     <Content Include="Bootstrap\Intranet\build\css\custom.min.css" />
-    <Content Include="Bootstrap\Intranet\build\images\Ae3QqtC.jpg" />
     <Content Include="Bootstrap\Intranet\build\images\back_disabled.png" />
     <Content Include="Bootstrap\Intranet\build\images\back_enabled.png" />
     <Content Include="Bootstrap\Intranet\build\images\back_enabled_hover.png" />
-    <Content Include="Bootstrap\Intranet\build\images\Captura.PNG" />
     <Content Include="Bootstrap\Intranet\build\images\forward_disabled.png" />
     <Content Include="Bootstrap\Intranet\build\images\forward_enabled.png" />
     <Content Include="Bootstrap\Intranet\build\images\forward_enabled_hover.png" />
-    <Content Include="Bootstrap\Intranet\build\images\hola.jpg" />
     <Content Include="Bootstrap\Intranet\build\images\loading.gif" />
     <Content Include="Bootstrap\Intranet\build\js\custom.js" />
     <Content Include="Bootstrap\Intranet\build\js\custom.min.js" />
