--- a/01_Presentacion/01_Presentacion.csproj
+++ b/01_Presentacion/01_Presentacion.csproj
@@ -4467,8 +4467,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-    <Content Include="Views\Producto\StockMenu.cshtml" />
-    <Content Include="Views\Producto\DetalleStock.cshtml" />
+    <Content Include="Views\Producto\Platos.cshtml" />
+    <Content Include="Views\Producto\ListaPlatos.cshtml" />
+    <Content Include="Views\Producto\NuevoPlato.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
