--- a/01_Presentacion/01_Presentacion.csproj
+++ b/01_Presentacion/01_Presentacion.csproj
@@ -4479,6 +4479,7 @@
     <Content Include="Views\Pedido\Main.cshtml" />
     <Content Include="Views\Pedido\AgregarMenu2.cshtml" />
     <Content Include="Views\Pedido\AgregarMenu.cshtml" />
+    <Content Include="Views\Pedido\MainPedido.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
