--- a/01_Presentacion/01_Presentacion.csproj
+++ b/01_Presentacion/01_Presentacion.csproj
@@ -129,6 +129,7 @@
     <Content Include="Bootstrap\Extranet\images\magnify.png" />
     <Content Include="Bootstrap\Extranet\images\marker.png" />
     <Content Include="Bootstrap\Extranet\images\mazamorra_morada.JPG" />
+    <Content Include="Bootstrap\Extranet\images\ocopa.jpg" />
     <Content Include="Bootstrap\Extranet\images\page1_img1.jpg" />
     <Content Include="Bootstrap\Extranet\images\page1_img2.jpg" />
     <Content Include="Bootstrap\Extranet\images\page1_img3.jpg" />
