--- a/01_Presentacion/01_Presentacion.csproj
+++ b/01_Presentacion/01_Presentacion.csproj
@@ -4478,9 +4478,13 @@
     <Content Include="Views\Cliente\Lista.cshtml" />
     <Content Include="Views\Cliente\DetalleLista.cshtml" />
     <Content Include="Views\Cliente\Editar.cshtml" />
-    <Content Include="Views\Pedido\Main.cshtml" />
+    <Content Include="Views\Pedido\NuevoPedido.cshtml" />
     <Content Include="Views\Pedido\AgregarMenu.cshtml" />
     <Content Include="Views\Pedido\MainPedido.cshtml" />
+    <Content Include="Views\Cliente\Eliminar.cshtml" />
+    <Content Include="Views\Producto\Eliminar.cshtml" />
+    <Content Include="Views\Pedido\Main.cshtml" />
+    <Content Include="Views\Pedido\DetalleMain.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
