--- a/02_Aplicacion/02_Aplicacion.csproj
+++ b/02_Aplicacion/02_Aplicacion.csproj
@@ -41,11 +41,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="appCliente.cs" />
+    <Compile Include="appMenu.cs" />
     <Compile Include="appPedido.cs" />
     <Compile Include="appProducto.cs" />
     <Compile Include="appSubTipoProducto.cs" />
     <Compile Include="appUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="appTipoPago.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\03_Dominio\03_Dominio.csproj">
