--- a/04_Presistencia/04_Presistencia.csproj
+++ b/04_Presistencia/04_Presistencia.csproj
@@ -42,8 +42,10 @@
   <ItemGroup>
     <Compile Include="Conexion.cs" />
     <Compile Include="daoCliente.cs" />
+    <Compile Include="daoMenu.cs" />
     <Compile Include="daoPedido.cs" />
     <Compile Include="daoProducto.cs" />
+    <Compile Include="daoTipoPago.cs" />
     <Compile Include="daoTrabajador.cs" />
     <Compile Include="daoUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
