--- a/01_Presentacion/01_Presentacion.csproj
+++ b/01_Presentacion/01_Presentacion.csproj
@@ -350,7 +350,7 @@
     <Content Include="Views\Cliente\Nuevo.cshtml" />
     <Content Include="Views\Intranet\Main.cshtml" />
     <Content Include="Views\Producto\PlatosDisponibles.cshtml" />
-    <Content Include="Views\Error\Index.cshtml" />
+    <Content Include="Views\Error\Indexx.cshtml" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
