--- a/04_Presistencia/04_Presistencia.csproj
+++ b/04_Presistencia/04_Presistencia.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Conexion.cs" />
     <Compile Include="daoCliente.cs" />
+    <Compile Include="daoDetallePedido.cs" />
     <Compile Include="daoMenu.cs" />
     <Compile Include="daoPedido.cs" />
     <Compile Include="daoProducto.cs" />
