--- a/02_Aplicacion/02_Aplicacion.csproj
+++ b/02_Aplicacion/02_Aplicacion.csproj
@@ -43,6 +43,7 @@
     <Compile Include="appCliente.cs" />
     <Compile Include="appDetallePedido.cs" />
     <Compile Include="appMenu.cs" />
+    <Compile Include="appMesa.cs" />
     <Compile Include="appPedido.cs" />
     <Compile Include="appProducto.cs" />
     <Compile Include="appSubTipoProducto.cs" />
